--- a/views/home.ejs
+++ b/views/home.ejs
@@ -34,7 +34,7 @@
             <div class="card-body">
                 <p>
                  Sucessfully LoggedIn!!!
-              
+                 <p>Welcome Mr./Mrs. <%=userData.nameID %> </p>
                 </p>
                 <a href="/login/logout" class="btn btn-primary">Logout</a>
             </div>
